cambios para que se muestren las marcas en el juego tres en raya

--- a/ajustes.html
+++ b/ajustes.html
@@ -32,7 +32,7 @@
       </div>
       <footer>Dolores Galán Corral-1ºDAW</footer>
       <script>
-        var elementoSeleccionado = document.getElementsByClassName("derecha")[0]; //default
+        var elementoSeleccionado = document.getElementsByClassName("derecha")[0]; 
         var color = document.getElementById("color");
         
         color.onchange = function() {
