--- a/tresEnR.html
+++ b/tresEnR.html
@@ -19,7 +19,9 @@
                 <li><a href="./tresEnR.html">Tres en raya</a></li>
                 <li><a href="./ajustes.html">Subrayar</a></l>
             </ul>
-    </nav>
+        </nav>
+        <div class="juego-titulo"><h2>TRES EN RAYA</h2></div>
+        <p id = "juego-info" class="juego-info"></p>
         <div class="juego-cuadricula">
 
             <div class="cuadro"></div>
